feat(frontend): 审计管理支持搜索批量删除
